tests/dataset/tpc-h/compiler/c/q12.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:19Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T08:19:18Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  const char *l_shipmode;
  int high_line_count;
  int low_line_count;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int o_orderkey;
  const char *o_orderpriority;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int l_orderkey;
  const char *l_shipmode;
  const char *l_commitdate;
  const char *l_receiptdate;
  const char *l_shipdate;
} lineitem_t;
typedef struct {
  int len;
  lineitem_t *data;
} lineitem_list_t;
lineitem_list_t create_lineitem_list(int len) {
  lineitem_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(lineitem_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *l_shipmode;
  double high_line_count;
  double low_line_count;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_Q12_counts_lineitems_by_ship_mode_and_priority_result;
static void test_Q12_counts_lineitems_by_ship_mode_and_priority() {
  tmp1_t tmp1[] = {(tmp1_t){
      .l_shipmode = "MAIL", .high_line_count = 1, .low_line_count = 0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_Q12_counts_lineitems_by_ship_mode_and_priority_result.len !=
      tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0;
         i3 < test_Q12_counts_lineitems_by_ship_mode_and_priority_result.len;
         i3++) {
      if (test_Q12_counts_lineitems_by_ship_mode_and_priority_result.data[i3] !=
          tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  order_t orders[] = {
      (order_t){.o_orderkey = 1, .o_orderpriority = "1-URGENT"},
      (order_t){.o_orderkey = 2, .o_orderpriority = "3-MEDIUM"}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  lineitem_t lineitem[] = {(lineitem_t){.l_orderkey = 1,
                                        .l_shipmode = "MAIL",
                                        .l_commitdate = "1994-02-10",
                                        .l_receiptdate = "1994-02-15",
                                        .l_shipdate = "1994-02-05"},
                           (lineitem_t){.l_orderkey = 2,
                                        .l_shipmode = "SHIP",
                                        .l_commitdate = "1994-03-01",
                                        .l_receiptdate = "1994-02-28",
                                        .l_shipdate = "1994-02-27"}};
  int lineitem_len = sizeof(lineitem) / sizeof(lineitem[0]);
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i4 = 0; i4 < result.len; i4++) {
    if (i4 > 0)
      printf(",");
    result_item_t it = result.data[i4];
    printf("{");
    _json_string("l_shipmode");
    printf(":");
    _json_string(it.l_shipmode);
    printf(",");
    _json_string("high_line_count");
    printf(":");
    _json_float(it.high_line_count);
    printf(",");
    _json_string("low_line_count");
    printf(":");
    _json_float(it.low_line_count);
    printf("}");
  }
  printf("]");
  test_Q12_counts_lineitems_by_ship_mode_and_priority_result = result;
  test_Q12_counts_lineitems_by_ship_mode_and_priority();
  return 0;
}
